feat: make room and room type response models more specific
This commit refactors the room and room type response models to be more specific, allowing for different levels of detail to be returned to the client.

- Adds a new RoomResponse_Full model which contains all fields from the original RoomResponse model, as well as additional fields for room types and room utilities.
- Adds a new RoomResponse_Basic model which contains only the basic fields of the RoomResponse model.
- Adds a new RoomTypeResponse_Full model which contains all fields from the original RoomTypeResponse model, as well as additional fields for utilities and rooms.
- Adds a new RoomTypeResponse_Minimal model which contains only the basic fields of the RoomTypeResponse model.

These changes provide more flexibility for the client to request the data they need, and improve the overall structure and clarity of the code.